--- a/NetBeansProjects/Tarea 2/src/main/resources/static/css/Estilos.css
+++ b/NetBeansProjects/Tarea 2/src/main/resources/static/css/Estilos.css
@@ -107,26 +107,31 @@ header .textos-header{
 
  .portafolio{
    background: #f2f2f2;
-   padding-bottom: 30px;
 }
 
- .imagen-port{
+ .galeria-port{
    display: flex;
    justify-content: space-evenly; 
-   align-items: center;
-  
+   flex-wrap: wrap;
 }
 
+.imagen-port{
+   width: 24%;
+   margin-bottom: 10px;
+   height: 200px;
+   overflow: hidden;
+   position: relative;
+   cursor:pointer;
+   box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
 
-
-.hover-galeria{
-   position: absolute;
+.imagen-port > img{
    width: 100%;
    height: 100%;
-    top:0;
-    transform: scale(0);
-    background: hsla(273, 91%, 27%, 0.7);
+   object-fit: cover;
+   display: block;
 }
+
 
 .cards{
    display: flex;
